Fixed issue #5