@@ -3,20 +3,19 @@ package edu.kit.datamanager.ro_crate.special;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.Optional;
 
-import org.apache.commons.validator.routines.UrlValidator;
-
 import com.apicatalog.jsonld.uri.UriUtils;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 /**
  * This class defines methods regarding URIs in general, which in RO-Crate
  * context means usually a valid, resolvable URL or a relative file path.
- * 
+ *
  * The purpose is to have a simple abstraction where the way e.g. a URL is
  * checked can be changed and tested easily for the whole library.
  */
@@ -29,9 +28,9 @@ public class UriUtil {
     }
 
     /**
-     * Returns true, if the given String can not be used as an identifier
-     * in RO-Crate.
-     * 
+     * Returns true, if the given String can not be used as an identifier in
+     * RO-Crate.
+     *
      * @param uri the given URI. Usually a URL or relative file path.
      * @return true if url is decoded, false if it is not.
      */
@@ -40,9 +39,9 @@ public class UriUtil {
     }
 
     /**
-     * Returns true, if the given String is encoded and can be used as an identifier
-     * in RO-Crate.
-     * 
+     * Returns true, if the given String is encoded and can be used as an
+     * identifier in RO-Crate.
+     *
      * @param uri the given URI. Usually a URL or relative file path.
      * @return trie if the url is encoded, false if it is not.
      */
@@ -52,7 +51,7 @@ public class UriUtil {
 
     /**
      * Returns true, if the given string is a url.
-     * 
+     *
      * @param uri the given string
      * @return true if it is a url, false otherwise.
      */
@@ -62,21 +61,25 @@ public class UriUtil {
 
     /**
      * Tests if the given String is a URL, and if so, returns it.
-     * 
-     * @param uri the given String which will be tested.
+     *
+     * @param uriAsString the given String which will be tested.
      * @return the url, if it is one.
      */
-    public static Optional<URL> asUrl(String uri) {
+    public static Optional<URL> asUrl(String uriAsString) {
         try {
-            return Optional.of(new URL(uri));
-        } catch (MalformedURLException e) {
-            return Optional.empty();
+            URI uri = new URI(uriAsString);
+            if (uri.isAbsolute()) {
+                return Optional.of(uri.toURL());
+            }
+        } catch (URISyntaxException | MalformedURLException ex) {
+            throw new IllegalArgumentException("This Data Entity remote ID does not resolve to a valid URL.");
         }
+        return Optional.empty();
     }
 
     /**
      * Returns true, if the given string is a path.
-     * 
+     *
      * @param uri the given string
      * @return true if it is a path, false otherwise.
      */
@@ -86,7 +89,7 @@ public class UriUtil {
 
     /**
      * Tests if the given String is a path, and if so, returns it.
-     * 
+     *
      * @param uri the given String which will be tested.
      * @return the path, if it is one.
      */
@@ -104,35 +107,22 @@ public class UriUtil {
 
     /**
      * Encodes a string using the description if the ro-crate-specification.
-     * 
+     *
      * @param uri the string to encode.
      * @return the encoded version of the given string, if possible.
      */
     public static Optional<String> encode(String uri) {
-        if (isValidUri(uri) || isLdBlankNode(uri)) {
-            return Optional.of(uri);
-        }
+        String result = uri;
         // according to
         // https://www.researchobject.org/ro-crate/1.1/data-entities.html#encoding-file-paths
         // a file path may not be fully encoded and may contain international unicode
         // characters. So we try a "soft"-encoding first, and if this is not yet valid,
         // we really fully encode it.
-        String result = uri;
+
         result = result.replace("\\", "/");
         result = result.replace("%", "%25");
         result = result.replace(" ", "%20");
-        if (isValidUri(result)) {
-            return Optional.of(result);
-        }
-        // from here on, our soft-encoding failed and we will fully encode the url or
-        // path.
-        result = URLEncoder.encode(result, StandardCharsets.UTF_8);
-
-        if (isValidUri(result)) {
-            return Optional.of(result);
-        } else {
-            return Optional.empty();
-        }
+        return Optional.of(result);
     }
 
     public static Optional<String> decode(String uri) {
@@ -145,7 +135,7 @@ public class UriUtil {
     /**
      * Returns true if the given string is a blank node identifier in the Linked
      * Data world.
-     * 
+     *
      * @param uri the given String
      * @return true if the string is a blank node. False if not.
      */
@@ -155,16 +145,31 @@ public class UriUtil {
 
     /**
      * Returns true, if the URLs domain exists.
-     * 
+     *
      * @param url the given URL
      * @return true if domain exists.
      */
     public static boolean hasValidDomain(String url) {
-        UrlValidator validator = new UrlValidator();
         if (isNotValidUri(url)) {
-            String encoded = URLEncoder.encode(url, StandardCharsets.UTF_8);
-            return validator.isValid(encoded);
+            String encoded = encode(url).get();
+            return asUrl(encoded) != null;
         }
-        return validator.isValid(url);
+        return asUrl(url) != null;
+    }
+
+    /**
+     * checks if the given string is correctly encoded.
+     *
+     * @param uri the given string
+     * @return true if the given string is correctly encoded.
+     */
+    public static boolean isEncoded(String uri) {
+        String decoded = decode(uri).get();
+        Optional<String> encoded = encode(decoded);
+        String result = null;
+        if (encoded.isPresent()) {
+            result = encoded.get();
+        }
+        return uri.equals(result);
     }
 }
